Fix #message in about.css and add word-wrap

--- a/data/about.css
+++ b/data/about.css
@@ -61,8 +61,9 @@ button img {
     padding: 2px 1px;
 }
 
-message {
+#message {
    font-size: 1.1em;
+   word-wrap: break-word;
 }
 
 description {
